# Kuka-Artist

./: Makefile  README.md  pyproject.toml
data/: contours.txt
src/: main.py
