[project.scripts]
kuka-artist = "main:main"

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
version = "0.0.1"

name        = "kuka-artist"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
  "matplotlib",
  "numpy",
  "opencv-python",
  "Pillow",
  "scikit-image",

  "black",
  "flake8",
  "mypy"
]

[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml",]
